--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,11 @@ body {
 #root div:hover {
     transform: scale(1.02);
 }
+
+.column-span {
+    grid-column: span 2;
+}
+
+.row-span {
+    grid-row: span 2;
+}
