--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* Works on Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: #515864 #282c34;
+}
+
+/* Works on Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #282c34;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #515864;
+    border: 3px solid #282c34;
+    border-radius: 20px;
 }
 
 body {
