--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -24,6 +26,8 @@
 
 body {
     background-color: #282c34;
+    font-family: 'Roboto', sans-serif;
+    color: #FAFAFA;
 }
 
 #root {
