--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
     margin: 0;
@@ -30,12 +30,62 @@ body {
     color: #FAFAFA;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px 20px;
+    background-color: #ff8e27;
+    color: #1d2027;
+}
+
+header .title-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .title-container .material-icons {
+    font-size: 30px;
+}
+
+header .title-container h1 {
+    padding-left: 10px;
+    font-size: 27px;
+}
+
+header .input-container {
+    position: relative;
+}
+
+header .input-container input {
+    padding: 7px 35px 7px 15px;
+    border-radius: 15px;
+    border: none;
+}
+
+header .input-container input:focus {
+    outline: none;
+}
+
+header .input-container .material-icons {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translate(0, -50%);
+    color: rgba(0, 0, 0, .7);
+}
+
 #root {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: minmax(300px, auto);
+    /* 100vh - header height */
+    height: calc(100vh - 73px);
     padding: 20px;
     gap: 20px;
+    overflow-y: auto;
 }
 
 #root div {
