--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ header .input-container .material-icons {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: minmax(300px, auto);
+    grid-auto-flow: dense;
     /* 100vh - header height */
     height: calc(100vh - 73px);
     padding: 20px;
