--- a/styles.css
+++ b/styles.css
@@ -4,24 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* Works on Firefox */
-    scrollbar-width: thin;
-    scrollbar-color: #989faa #e1e5ec;
-}
-
-/* Works on Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-    width: 12px;
-}
-
-*::-webkit-scrollbar-track {
-    background-color: #e1e5ec;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #989faa;
-    border: 3px solid #e1e5ec;
-    border-radius: 20px;
 }
 
 body {
@@ -35,7 +17,7 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 20px 20px;
+    padding: 20px 40px 20px 20px;
     background-color: #e1e5ec;
     color: #1d2027;
     border-bottom: 5px solid #ff8e27;
@@ -65,6 +47,7 @@ header .input-container input {
     padding: 7px 35px 7px 15px;
     border-radius: 15px;
     border: none;
+    box-shadow: 0 0 4px 0px rgba(0, 0, 0, .3);
 }
 
 header .input-container input:focus {
@@ -76,7 +59,9 @@ header .input-container .material-icons {
     top: 50%;
     right: 5px;
     transform: translate(0, -50%);
-    color: rgba(0, 0, 0, .7);
+    font-size: 22px;
+    color: #1d2027;
+    font-weight: 600;
 }
 
 #root {
