--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Comfortaa', cursive;
 }
 
 body {
     background-color: #e1e5ec;
-    font-family: 'Roboto', sans-serif;
     color: #FAFAFA;
 }
 
@@ -51,7 +51,7 @@ header .input-container input {
 }
 
 header .input-container input:focus {
-    outline: none;
+    outline: 2px solid #1d2027;
 }
 
 header .input-container .material-icons {
